--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.header_link {
+  font-family: 'Cabin', sans-serif;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+
 .link-grey {
 	color: #37474F;
 }
@@ -27,21 +33,30 @@
 	text-decoration: none;
 }
 
+.search-input {
+	border: none;
+	background-color: #FFF;
+	outline: none;
+  border: none !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important; 
+}
+
 .main_jumbo {
-	background: url('front_banner.jpg') center;
+	//background: url('front_banner.jpg') center;
+	background-color: #f1c40f;
 	height: 500px;
   color: #fff;
-  text-align: center;
+  text-align: left;
   margin-top: -20px;
 }
 
 .brands_jumbo {
-	background: url('database_banner.jpg') center;
-	background-color: #FFF;
+	//background: url('database_banner.jpg') center;
+	background-color: #2ecc71;
 	height: 200px;
   color: #fff;
-  text-align: center;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
   margin-top: -20px;
 }
 
@@ -52,4 +67,8 @@
 	margin-bottom: 15px;
 	margin-right: 15px;
 	z-index: 9999;
+}
+
+.input-group-addon {
+	border-left:1px solid #000;
 }
