--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,9 @@
 	<div class="container">
 		<div class="row" style="margin-top: 150px;">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="cabin" style="letter-spacing: 2.0; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);">YOUR GUIDE TO BRANDS ON SNAPCHAT</h1>
-				<h3 style="text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);">Connect with your favorite brands to get inside looks, exclusive content, promo codes, teasers, and more</h3>
-				<div id="the-basics">
+				<h1 class="cabin" style="color: #000;">Your guide to brands on Snapchat.</h1>
+				<h3 class="cabin" style="color: #FFF59D;">Connect with your favorite brands to get inside looks, exclusive content, promo codes, teasers, and more</h3>
+				<!--<div id="the-basics">
 		      <%= form_tag brands_path, :method => 'get' do %>
 		        <p>
 		          <%= text_field_tag :search, params[:search], :placeholder => "Explore by brand name", :class => "form-control typeahead" %>
@@ -23,7 +23,7 @@
 					  <option value="/brands?industry=Entertainment">Entertainment</option>
 					  <option value="/brands?industry=Media">Media</option>
 					</select>
-		    </div>
+		    </div>-->
 		  </div>
 		</div>
 	</div>
