--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -9,7 +9,10 @@
 
 <div class="brands_jumbo" style="margin-bottom: 30px;">
   <div class="container">
-    <h1>LET'S DISCOVER</h1>
+    <div class="col-md-8 col-md-offset-2">
+      <h1 class="cabin" style="color: #FFF;">Let's discover.</h1>
+      <h3 class="cabin" style="color: #33691E;">Connect with your favorite brands to get inside looks, exclusive content, promo codes, teasers, and more</h3>
+    </div>
   </div>
 </div>
 <div class="container">
