--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -60,6 +60,8 @@
   <div style="background-color: #fff;">
     <div class="table-responsive">
       <table class="table table-hover table-condensed sortable-theme-bootstrap" id="brand-table" data-sortable>
+        <b>&nbsp;<%= @brands.count %> Brands Tracked</b>
+        <br /><br />
         <small style="color: #BDBDBD;">* Activity means number of days with Stories over last two weeks</small>
         <thead>
           <tr>
