--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -54,7 +54,14 @@
 
 .brands_jumbo {
 	//background: url('database_banner.jpg') center;
-	background-color: #2ecc71;
+	background-color: #9b59b6;
+	height: 200px;
+  color: #fff;
+  margin-top: -20px;
+}
+
+.charts_jumbo {
+	background-color: #4DB6AC;
 	height: 200px;
   color: #fff;
   margin-top: -20px;
