--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
       <h1 class="cabin" style="color: #FFF;">Let's discover.</h1>
-      <h3 class="cabin" style="color: #33691E;">Connect with your favorite brands to get inside looks, exclusive content, promo codes, teasers, and more</h3>
+      <h3 class="cabin" style="color: #B39DDB;">Connect with your favorite brands to get inside looks, exclusive content, promo codes, teasers, and more</h3>
     </div>
   </div>
 </div>
