--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right header_link collapse-bg">
-        <li><%= link_to "DATABASE", brands_path %></li>
+        <li><%= link_to "BRANDS", brands_path %></li>
+        <li><%= link_to "CHARTS", charts_path %></li>
         <% if user_signed_in? %>
           <!--<li><%= link_to "Account Settings", edit_user_registration_path %></li>-->
           <li><%= link_to "SIGN OUT", destroy_user_session_path, :method => :delete %></li>
