--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -52,6 +52,11 @@
   margin-top: -20px;
 }
 
+.main_jumbo h1 {
+	font-size: 500%;
+	font-size: 7.5vw;
+}
+
 .brands_jumbo {
 	//background: url('database_banner.jpg') center;
 	background-color: #9b59b6;
