--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -23,7 +23,7 @@ $border-radius-base: 0px !important;
 
 
 .btn {
-  border-radius: 50px;
+  border-radius: 50px !important;
   //background: none;
   border: 1px solid;
 }
