--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing news</h1>
+<div class="container">
+	<h1>Editing news</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @news %> |
-<%= link_to 'Back', news_index_path %>
+	<%= link_to 'Show', @news %> |
+	<%= link_to 'Back', news_index_path %>
+</div>
