--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,5 +28,18 @@
 		</div>
 	</div>
 </div>
+<br /><br />
+<div class="container" style="background-color: #FFF;">
+	<table class="table table-striped">
+    <tbody>
+			<% @news.each do |news| %>
+		    <tr>
+		      <td><%= news.date.strftime("%m/%d/%y") %></td>
+		      <td><%= link_to news.title, news, :class => "link-grey" %></td>
+		    </tr>
+		  <% end %>
+		</tbody>
+	</table>
+</div>
 
 <%= javascript_include_tag "matcher" %>
