--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -57,6 +57,10 @@
 	font-size: 7.5vw;
 }
 
+.recent_news > .table > tbody > tr:first-child > td {
+	border: none;
+}
+
 .brands_jumbo {
 	//background: url('database_banner.jpg') center;
 	background-color: #9b59b6;
