--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to " Snap Sherpa", root_path, :class => "navbar-brand" %>
+      <%= link_to (image_tag "logo-200px.png", :size => "40x27", :title => "Snap Sherpa"), root_path, :class => "navbar-brand", :style => "margin-top: -5px;" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
