--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -60,9 +60,9 @@
   <div style="background-color: #fff;">
     <div class="table-responsive">
       <table class="table table-hover table-condensed sortable-theme-bootstrap" id="brand-table" data-sortable>
-        <b>&nbsp;<%= @brands.count %> Brands Tracked</b>
+        <b>&nbsp;<%= @brands.count %> Brand(s)</b>
         <br /><br />
-        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last two weeks</small>
+        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last two weeks as of Sunday, Feb. 22</small>
         <thead>
           <tr>
             <th style="text-align: left;">Name</th>
