--- a/app/views/pages/charts.html.erb
+++ b/app/views/pages/charts.html.erb
@@ -25,3 +25,12 @@
 	<br /><br />
 	The calculation is performed gathering data over the most recent 14 day period and using the formula: (total number of active days by brands per industry) &divide; (total number of active brands by industry).
 </div>
+<br /><br />
+<div class="container" style="background-color: #FFF;">
+	<h4 class="cabin" style="letter-spacing: 2px; margin-bottom: -3px;">BRAND ACTIVITY</h3>
+	<small><i>
+		Trailing 14 Days
+	</i></small>
+	<%= image_tag "numberact.png", :class => "img-responsive" %>
+	This chart demonstrates <b>how often</b> brands share Stories brands on Snapchat.
+</div>
