--- a/app/views/pages/charts.html.erb
+++ b/app/views/pages/charts.html.erb
@@ -1,8 +1,8 @@
 <div class="charts_jumbo" style="margin-bottom: 30px;">
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
-      <h1 class="cabin" style="color: #FFF;">Insights into what brands are doing.</h1>
-      <h3 class="cabin" style="color: #00897B;">Connect with your favorite brands to get inside looks, exclusive content, promo codes, teasers, and more</h3>
+      <h1 class="cabin" style="color: #FFF;">Chart it out.</h1>
+      <h3 class="cabin" style="color: #00897B;">Insights into how brands are using Snapchat.</h3>
     </div>
   </div>
 </div>
