--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -60,7 +60,13 @@
   <div style="background-color: #fff;">
     <div class="table-responsive">
       <table class="table table-hover table-condensed sortable-theme-bootstrap" id="brand-table" data-sortable>
-        <b>&nbsp;<%= @brands.count %> Brand(s)</b>
+        <b>&nbsp;<%= @brands.count %>
+          <% if @brands.count == 1 %>
+             Brand
+          <% else %>
+             Brands
+          <% end %>
+        </b>
         <br /><br />
         <small style="color: #BDBDBD;">* Activity means number of days with Stories over last two weeks as of Sunday, Feb. 22</small>
         <thead>
