--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,7 +41,7 @@
 				      <td>
 				      	<%= link_to news.title, news, :class => "link-grey" %>
 				      	<br />
-				      	<small><%= news.author %> // <%= news.source %></small>
+				      	<small style="font-color: #9e9e9e;"><%= news.author %> // <%= news.source %></small>
 				      </td>
 				    </tr>
 				  <% end %>
