Front page copy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 		<div class="row" style="margin-top: 50px;">
 			<div class="col-md-10 col-md-offset-1">
 				<h1 class="cabin" style="color: #000;">Your guide to brands on Snapchat.</h1>
-				<h3 class="cabin" style="color: #FFF59D;">Don't let your chance to market on Snapchat <i>disappear</i>. See what other brands and marketers are doing.</h3>
+				<h3 class="cabin" style="color: #FFF59D;">Don't let your chance to interact with fans on Snapchat <i>disappear</i>. See what other brands and marketers are doing.</h3>
 				<!--<div id="the-basics">
 		      <%= form_tag brands_path, :method => 'get' do %>
 		        <p>
