--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -57,7 +57,7 @@
 	font-size: 7.5vw;
 }
 
-.recent_news > .table > tbody > tr:first-child > td {
+.front_tables > .table > tbody > tr:first-child > td {
 	border: none;
 }
 
