--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -69,7 +69,7 @@
           <% end %>
         </b>
         <br /><br />
-        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last two weeks as of Sunday, Feb. 22</small>
+        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last two weeks</small>
         <thead>
           <tr>
             <th style="text-align: left;">Name</th>
@@ -85,7 +85,7 @@
           <% @brands.each do |brand| %>
             <tr>
               <td>
-                <table border="0">
+                <table class="table-condensed">
                   <tbody>
                     <tr>
                       <td>
