--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -69,7 +69,7 @@
           <% end %>
         </b>
         <br /><br />
-        <small style="color: #BDBDBD;">* Activity means number of days with Stories over last two weeks</small>
+        <small style="color: #BDBDBD;">* Activity is determined by tracking which brands have a Story posted at approximately 12am ET over a trailing 14 day period.</small>
         <thead>
           <tr>
             <th style="text-align: left;">Name</th>
