--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-7 front_tables" style="background-color: #FFF;">
-			<h3>Recent News</h3>
+			<h3>Top News Picks</h3>
 			<table class="table table-striped">
 		    <tbody>
 					<% @news.each do |news| %>
